tabindex to form added

--- a/source/form.html
+++ b/source/form.html
@@ -75,15 +75,15 @@
               <label class="impression-form__label">Ваше общее впечатление:</label>
               <p class="impression-form__input">
                 <input class="impression-form__field" type="radio" id="positive" name="impression" value="Скорее положительное" checked>
-                <label class="impression-form__input-label" for="positive">Скорее положительное</label>
+                <label class="impression-form__input-label" for="positive" tabindex="0">Скорее положительное</label>
               </p>
               <p class="impression-form__input">
                 <input class="impression-form__field" type="radio" id="negative" name="impression" value="Скорее отрицательное">
-                <label class="impression-form__input-label" for="negative">Скорее отрицательное</label>
+                <label class="impression-form__input-label" for="negative" tabindex="0">Скорее отрицательное</label>
               </p>
               <p class="impression-form__input">
                 <input class="impression-form__field" type="radio" id="neutral" name="impression" value="Затрудняюсь ответить">
-                <label class="impression-form__input-label" for="neutral">Затрудняюсь ответить</label>
+                <label class="impression-form__input-label" for="neutral" tabindex="0">Затрудняюсь ответить</label>
               </p>
             </div>
             <div class="feedback__form sightseen-form">
@@ -91,19 +91,19 @@
               <div class="sightseen-form__wrapper">
                 <p class="sightseen-form__input">
                   <input class="sightseen-form__field" type="checkbox" id="devilbridge" name="devilbridge" value="Мост Дьявола" checked>
-                  <label class="sightseen-form__input-label" for="devilbridge">Мост Дьявола</label>
+                  <label class="sightseen-form__input-label" for="devilbridge" tabindex="0">Мост Дьявола</label>
                 </p>
                 <p class="sightseen-form__input">
                   <input class="sightseen-form__field" type="checkbox" id="mountainbell" name="mountainbell" value="Гора-Колокол" checked>
-                  <label class="sightseen-form__input-label" for="mountainbell">Гора-Колокол</label>
+                  <label class="sightseen-form__input-label" for="mountainbell" tabindex="0">Гора-Колокол</label>
                 </p>
                 <p class="sightseen-form__input">
                   <input class="sightseen-form__field" type="checkbox" id="slidepark" name="slidepark" value="Слайд-парк" checked>
-                  <label class="sightseen-form__input-label" for="slidepark">Слайд-парк</label>
+                  <label class="sightseen-form__input-label" for="slidepark" tabindex="0">Слайд-парк</label>
                 </p>
                 <p class="sightseen-form__input">
                   <input class="sightseen-form__field" type="checkbox" id="redrocks" name="redrocks" value="Красные скалы">
-                  <label class="sightseen-form__input-label" for="redrocks">Красные скалы</label>
+                  <label class="sightseen-form__input-label" for="redrocks" tabindex="0">Красные скалы</label>
                 </p>
               </div>
             </div>
@@ -134,17 +134,17 @@
           <b class="contacts__tag">#visitsedona</b>
           <ul class="contacts__list social-list">
             <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">
-              <svg class="social-list__icon" width="17" height="15"><use xlink:href="#icon-twitter"></use></svg>
+              <svg class="social-list__icon" width="17" height="15" alt="твиттер"><use xlink:href="#icon-twitter"></use></svg>
             </a></li>
             <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">
-              <svg class="social-list__icon" width="9" height="19"><use xlink:href="#icon-facebook"></use></svg>
+              <svg class="social-list__icon" width="8" height="19" alt="фейсбук"><use xlink:href="#icon-facebook"></use></svg>
             </a></li>
             <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">
-              <svg class="social-list__icon" width="20" height="14"><use xlink:href="#icon-youtube"></use></svg>
+              <svg class="social-list__icon" width="20" height="14" alt="ютуб"><use xlink:href="#icon-youtube"></use></svg>
             </a></li>
           </ul>
           <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-            <svg class="contacts__icon" width="27" height="34"><use xlink:href="#icon-htmlacademy"></use></svg>
+            <svg class="contacts__icon" width="27" height="34" alt="академия"><use xlink:href="#icon-htmlacademy"></use></svg>
           </a></p>
         </section>
       </footer>
