--- a/source/gallery.html
+++ b/source/gallery.html
@@ -169,17 +169,17 @@
           <b class="contacts__tag">#visitsedona</b>
           <ul class="contacts__list social-list">
             <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">
-              <svg class="social-list__icon" width="17.5" height="14.663"><use xlink:href="#icon-twitter"></use></svg>
+              <svg class="social-list__icon" width="17" height="15" alt="твиттер"><use xlink:href="#icon-twitter"></use></svg>
             </a></li>
             <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">
-              <svg class="social-list__icon" width="8.672" height="18.944"><use xlink:href="#icon-facebook"></use></svg>
+              <svg class="social-list__icon" width="8" height="19" alt="фейсбук"><use xlink:href="#icon-facebook"></use></svg>
             </a></li>
             <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">
-              <svg class="social-list__icon" width="20" height="14"><use xlink:href="#icon-youtube"></use></svg>
+              <svg class="social-list__icon" width="20" height="14" alt="ютуб"><use xlink:href="#icon-youtube"></use></svg>
             </a></li>
           </ul>
           <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-            <svg class="contacts__icon" width="27" height="34"><use xlink:href="#icon-htmlacademy"></use></svg>
+            <svg class="contacts__icon" width="27" height="34" alt="академия"><use xlink:href="#icon-htmlacademy"></use></svg>
           </a></p>
         </section>
       </footer>
