html tree corrected

--- a/source/gallery.html
+++ b/source/gallery.html
@@ -61,7 +61,7 @@
                   <p class="pictures-list__author">Автор фото: Борис</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like" alt="лайки"></use></svg>
                   <span class="pictures-list__digitals">1350</span>
                 </div>
               </div>
@@ -82,7 +82,7 @@
                   <p class="pictures-list__author">Автор фото: Сергей</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" alt="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">143</span>
                 </div>
               </div>
@@ -103,7 +103,7 @@
                   <p class="pictures-list__author">Автор фото: Петр</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" alt="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">96</span>
                 </div>
               </div>
@@ -124,7 +124,7 @@
                   <p class="pictures-list__author">Автор фото: Антон</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" alt="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">254</span>
                 </div>
               </div>
