--- a/source/index.html
+++ b/source/index.html
@@ -47,9 +47,9 @@
           <ul class="reasons__list reasons-list columns">
             <li class="reasons-list__item reasons-list__item--bg-blue">
               <div class="reasons-list__bg-blue-wrapper columns__item-33">
-                <h2 class="reasons-list__bg-blue-title">Настоящий <span class="reasons-list__new-line--desctop">городок</span></h2>
+                <h2 class="reasons-list__bg-blue-title">Настоящий <span class="reasons-list__new-line-desctop">городок</span></h2>
                 <span class="reasons-list__bg-blue-number">-№1-</span>
-                <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ,<span class="reasons-list__new-line--desctop"> ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</span></p>
+                <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ,<span class="reasons-list__new-line-desctop"> ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</span></p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--hotel columns__item-66">
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
@@ -60,32 +60,32 @@
                 <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="отель">
               </picture>
             </li>
-            <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--motel columns__item-33">
+            <li class="reasons-list__item reasons-list__add-info reasons-list__add-info--motel columns__item-33">
               <div class="reasons-list__add-info-wrapper">
                 <h2 class="reasons-list__add-info-title">Жилье</h2>
                 <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
               </div>
               <svg class="reasons-list__icon" width="75" height="72"><use xlink:href="#icon-house"></use></svg>
             </li>
-            <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--souvenir columns__item-33">
+            <li class="reasons-list__item reasons-list__add-info reasons-list__add-info--souvenir columns__item-33">
               <div class="reasons-list__add-info-wrapper">
                 <h2 class="reasons-list__add-info-title">Сувениры</h2>
-                <p class="reasons-list__add-info-description">Не только китайского, <span class="reasons-list__new-line--desctop">но и местного производства</span></p>
+                <p class="reasons-list__add-info-description">Не только китайского, <span class="reasons-list__new-line-desctop">но и местного производства</span></p>
                 <svg class="reasons-list__icon" width="63" height="75"><use xlink:href="#icon-gift"></use></svg>
               </div>
             </li>
-            <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--food columns__item-33">
+            <li class="reasons-list__item reasons-list__add-info reasons-list__add-info--food columns__item-33">
               <div class="reasons-list__add-info-wrapper">
                 <h2 class="reasons-list__add-info-title">Еда</h2>
-                <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, <span class="reasons-list__new-line--desctop">вы не разочаруетесь</span></p>
+                <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, <span class="reasons-list__new-line-desctop">вы не разочаруетесь</span></p>
                 <svg class="reasons-list__icon" width="76" height="69"><use xlink:href="#icon-burger"></use></svg>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-blue">
               <div class="reasons-list__bg-blue-wrapper reasons-list__bg-blue-wrapper--short columns__item-33">
-                <h2 class="reasons-list__bg-blue-title">Там есть <span class="reasons-list__new-line">мост дьявола</span></h2>
+                <h2 class="reasons-list__bg-blue-title">Там есть <span class="reasons-list__new-line-tablet">мост дьявола</span></h2>
                 <span class="reasons-list__bg-blue-number">-№2-</span>
-                <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line--desctop">Если вы осмелитесь, конечно</span></p>
+                <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! <span class="reasons-list__new-line-desctop">Если вы осмелитесь, конечно</span></p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--bridge columns__item-66">
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
@@ -98,21 +98,21 @@
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__bg-grey-wrapper">
-                <h2 class="reasons-list__bg-grey-title">Небольшая <span class="reasons-list__new-line--desctop">площадь</span></h2>
+                <h2 class="reasons-list__bg-grey-title">Небольшая <span class="reasons-list__new-line-desctop">площадь</span></h2>
                 <span class="reasons-list__bg-grey-number">-№3-</span>
                 <p class="reasons-list__bg-grey-description">Все интересные места находятся очень близко</p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__bg-grey-wrapper">
-                <h2 class="reasons-list__bg-grey-title">Красивая <span class="reasons-list__new-line">дорога</span></h2>
+                <h2 class="reasons-list__bg-grey-title">Красивая <span class="reasons-list__new-line-tablet">дорога</span></h2>
                 <span class="reasons-list__bg-grey-number">-№4-</span>
-                <p class="reasons-list__bg-grey-description">Ехать в Седону из Лас-Вегаса совсем <span class="reasons-list__new-line--desctop">не скучно!</span></p>
+                <p class="reasons-list__bg-grey-description">Ехать в Седону из Лас-Вегаса совсем <span class="reasons-list__new-line-desctop">не скучно!</span></p>
               </div>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
               <div class="reasons-list__bg-grey-wrapper">
-                <h2 class="reasons-list__bg-grey-title">Мало <span  class="reasons-list__new-line">туристов</span></h2>
+                <h2 class="reasons-list__bg-grey-title">Мало <span  class="reasons-list__new-line-tablet">туристов</span></h2>
                 <span class="reasons-list__bg-grey-number">-№5-</span>
                 <p class="reasons-list__bg-grey-description">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
