--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
         </header>
         <section class="reasons">
           <div class="reasons__wrapper">
-            <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h1>
+            <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, <span class="reasons__new-line-desctop">заслуживающий большего!</span></h1>
             <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
           <ul class="reasons__list reasons-list columns">
