svg desc corrected

--- a/source/gallery.html
+++ b/source/gallery.html
@@ -61,7 +61,7 @@
                   <p class="pictures-list__author">Автор фото: Борис</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20"><use xlink:href="#icon-like" alt="лайки"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" aria-label="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">1350</span>
                 </div>
               </div>
@@ -82,7 +82,7 @@
                   <p class="pictures-list__author">Автор фото: Сергей</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20" alt="лайки"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" aria-label="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">143</span>
                 </div>
               </div>
@@ -103,7 +103,7 @@
                   <p class="pictures-list__author">Автор фото: Петр</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20" alt="лайки"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" aria-label="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">96</span>
                 </div>
               </div>
@@ -124,7 +124,7 @@
                   <p class="pictures-list__author">Автор фото: Антон</p>
                 </div>
                 <div class="pictures-list__likes">
-                  <svg class="pictures-list__icon" width="22" height="20" alt="лайки"><use xlink:href="#icon-like"></use></svg>
+                  <svg class="pictures-list__icon" width="22" height="20" aria-label="лайки"><use xlink:href="#icon-like"></use></svg>
                   <span class="pictures-list__digitals">254</span>
                 </div>
               </div>
@@ -168,18 +168,18 @@
           <h2 class="visually-hidden">Контакты в социальных сетях</h2>
           <b class="contacts__tag">#visitsedona</b>
           <ul class="contacts__list social-list">
-            <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">
-              <svg class="social-list__icon" width="17" height="15" alt="твиттер"><use xlink:href="#icon-twitter"></use></svg>
+            <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank" aria-label="твиттер">
+              <svg class="social-list__icon" width="17" height="15"><use xlink:href="#icon-twitter"></use></svg>
             </a></li>
-            <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">
-              <svg class="social-list__icon" width="8" height="19" alt="фейсбук"><use xlink:href="#icon-facebook"></use></svg>
+            <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank" aria-label="фейсбук">
+              <svg class="social-list__icon" width="8" height="19"><use xlink:href="#icon-facebook"></use></svg>
             </a></li>
-            <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">
-              <svg class="social-list__icon" width="20" height="14" alt="ютуб"><use xlink:href="#icon-youtube"></use></svg>
+            <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank" aria-label="ютуб">
+              <svg class="social-list__icon" width="20" height="14"><use xlink:href="#icon-youtube"></use></svg>
             </a></li>
           </ul>
-          <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-            <svg class="contacts__icon" width="27" height="34" alt="академия"><use xlink:href="#icon-htmlacademy"></use></svg>
+          <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive" target="_blank" aria-label="академия">
+            <svg class="contacts__icon" width="27" height="34"><use xlink:href="#icon-htmlacademy"></use></svg>
           </a></p>
         </section>
       </footer>
